log/build_2025-01-27_01-30-36/arm_bot/stderr.log
  File "/home/dog/ros2_ws/install/arm_bot/lib/python3.8/site-packages/arm_bot/sub_sensinfo.py", line 76
    self.servoes["servo2"] = 180:
                                ^
SyntaxError: invalid syntax

